--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,18 @@ dependencies:
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.2.0+3
   curved_navigation_bar: ^1.0.6
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  intl: ^0.19.0
+  google_maps_flutter: ^2.9.0
+  google_places_flutter: ^2.0.9
+  flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  geolocator: ^9.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
