--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   google_maps_flutter: ^2.9.0
   google_places_flutter: ^2.0.9
   flutter_rating_bar: ^4.0.1
+  shared_preferences: ^2.3.3
+  provider: ^6.1.2
 
 
 dev_dependencies:
