--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,34 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
+  cupertino_icons: ^1.0.8
+  curved_navigation_bar: ^1.0.6
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  http: ^1.2.2
-  
-  image_picker: ^1.1.2
-  carousel_slider: ^5.0.0
-  google_fonts: ^6.2.1
-  smooth_page_indicator: ^1.2.0+3
-  curved_navigation_bar: ^1.0.6
   flutter_map: ^7.0.2
-  latlong2: ^0.9.1
-  intl: ^0.19.0
+  flutter_rating_bar: ^4.0.1
+  flutter_secure_storage: ^9.2.2
+  google_fonts: ^6.2.1
   google_maps_flutter: ^2.9.0
   google_places_flutter: ^2.0.9
-  flutter_rating_bar: ^4.0.1
-  shared_preferences: ^2.3.3
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  latlong2: ^0.9.1
   provider: ^6.1.2
-
+  shared_preferences: ^2.3.3
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  geolocator: ^9.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,10 +55,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
+  geolocator: ^9.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -79,13 +73,10 @@ flutter:
   assets:
     - assets/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
