--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
+  file_picker: ^8.1.4
   flutter:
     sdk: flutter
   flutter_map: ^7.0.2
